[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mkdocs-autorefs"
description = "Automatically link across pages in MkDocs."
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
    {name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"},
]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mkdocs", "mkdocs-plugin", "docstrings", "autodoc"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "Markdown>=3.3",
    "markupsafe>=2.0.1",
    "mkdocs>=1.1",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/autorefs"
Documentation = "https://mkdocstrings.github.io/autorefs"
Changelog = "https://mkdocstrings.github.io/autorefs/changelog"
Repository = "https://github.com/mkdocstrings/autorefs"
Issues = "https://github.com/mkdocstrings/autorefs/issues"
Discussions = "https://github.com/mkdocstrings/autorefs/discussions"
Gitter = "https://gitter.im/mkdocstrings/autorefs"

[project.entry-points."mkdocs.plugins"]
autorefs = "mkdocs_autorefs.plugin:AutorefsPlugin"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
ci-quality = ["mkdocs-autorefs[duty,docs,quality,typing,security]"]
ci-tests = ["mkdocs-autorefs[duty,tests]"]
docs = [
    "black>=23.9",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs>=1.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.4",
    "mkdocs-minify-plugin>=0.7",
    "mkdocstrings[python]>=0.23",
    "tomli>=2.0; python_version < '3.11'",
]
maintain = [
    "black>=23.9",
    "blacken-docs>=1.16",
    "git-changelog>=2.3",
]
quality = [
    "ruff>=0.0",
]
tests = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.3",
    "pymdown-extensions>=10.0",
]
typing = [
    "mypy>=1.5",
    "types-markdown>=3.5",
    "types-pyyaml>=6.0",
]
security = [
    "safety>=2.3",
]
