[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mkdocs-autorefs"
description = "Automatically link across pages in MkDocs."
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
    {name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"},
]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mkdocs", "mkdocs-plugin", "docstrings", "autodoc"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "Markdown>=3.3",
    "markupsafe>=2.0.1",
    "mkdocs>=1.1",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/autorefs"
Documentation = "https://mkdocstrings.github.io/autorefs"
Changelog = "https://mkdocstrings.github.io/autorefs/changelog"
Repository = "https://github.com/mkdocstrings/autorefs"
Issues = "https://github.com/mkdocstrings/autorefs/issues"
Discussions = "https://github.com/mkdocstrings/autorefs/discussions"
Gitter = "https://gitter.im/mkdocstrings/autorefs"

[project.entry-points."mkdocs.plugins"]
autorefs = "mkdocs_autorefs.plugin:AutorefsPlugin"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "devdeps.txt",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
