[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mkdocs-autorefs"
description = "Automatically link across pages in MkDocs."
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
    {name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"},
]
license = "ISC"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mkdocs", "mkdocs-plugin", "docstrings", "autodoc"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "Markdown>=3.3",
    "markupsafe>=2.0.1",
    "mkdocs>=1.1",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/autorefs"
Documentation = "https://mkdocstrings.github.io/autorefs"
Changelog = "https://mkdocstrings.github.io/autorefs/changelog"
Repository = "https://github.com/mkdocstrings/autorefs"
Issues = "https://github.com/mkdocstrings/autorefs/issues"
Discussions = "https://github.com/mkdocstrings/autorefs/discussions"
Gitter = "https://gitter.im/mkdocstrings/autorefs"

[project.entry-points."mkdocs.plugins"]
autorefs = "mkdocs_autorefs:AutorefsPlugin"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
dev = [
    # maintenance
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",

    # ci
    "duty>=1.4",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
    "pymdown-extensions>=10.14",

    # docs
    "black>=24.4",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-llmstxt>=0.1",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]